# src/routes/user.ts
@@ -12,6 +12,7 @@ const router=express.Router()
 router.get('/game', controllers.User.games)
 router.get('/events', controllers.User.events)
 router.get('/transactions', controllers.User.transactions)
+router.get('/self', controllers.User.self)
 router.get('/transacttion/:userId', controllers.User.GetUserTransacttion)
 router.post('/fireEvent/:eventId' ,validateRequest(validators.user.fireEvent),controllers.User.fireEvent)
 
